--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(add_to_ggmatrix)
 export(brew_colors)
 export(broomify)
 export(eval_data_col)
+export(eval_ggcall)
 export(fn_switch)
 export(geom_stripped_cols)
 export(geom_stripped_rows)
@@ -72,6 +73,8 @@ export(ggally_tableDiag)
 export(ggally_text)
 export(ggally_trends)
 export(ggbivariate)
+export(ggcall)
+export(ggcall_env)
 export(ggcoef)
 export(ggcoef_compare)
 export(ggcoef_model)
@@ -91,6 +94,7 @@ export(ggnetworkmap)
 export(ggnostic)
 export(ggpairs)
 export(ggparcoord)
+export(ggplot)
 export(ggscatmat)
 export(ggsurv)
 export(ggtable)
@@ -139,6 +143,7 @@ importFrom(dplyr,all_of)
 importFrom(dplyr,group_by)
 importFrom(dplyr,rename)
 importFrom(dplyr,summarise)
+importFrom(ggplot2,ggplot)
 importFrom(ggstats,StatCross)
 importFrom(ggstats,StatProp)
 importFrom(ggstats,StatWeightedMean)
