--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(ggally_text)
 export(ggally_trends)
 export(ggbivariate)
 export(ggcall)
+export(ggcall_add_assignments)
 export(ggcall_env)
 export(ggcoef)
 export(ggcoef_compare)
